fixing on mounted

--- a/keeprclient/public/index.html
+++ b/keeprclient/public/index.html
@@ -23,6 +23,15 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
 </body>
 
 </html>
+
+<!-- <script src="https://unpkg.com/colcade@0/colcade.js"></script>
+  <script>
+    var colc = new Colcade('.grid', {
+      columns: '.grid-col',
+      items: '.grid-item'
+    });
+  </script> -->
